@@ -1,3 +1,9 @@
+2021-05-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3244.c:
+	  Fix bug #3244.
+
 2021-05-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/Makefile.in,
